maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: '(' expected but identifier found.
      if aBiscuit(k,l){
         ^ShortestPathMaze:14: error: illegal start of simple expression
    }
    ^