maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
 Numeroter()
}

def trouverSortie():(Int,Int)={
  var x:Int=getMondeLargeur()
  var y:Int=getMondeHauteur()
  for (k <- 0 to x-1){
    for (l <- 0 to y-1){
      if aBiscuit(k,l){
        return (k,l)
      }
    }
  }
  return(9999,9999)
}

def Numeroter(x:Int,y:Int) {
  var compteur:Int=1
  var larg:Int=getMondeLargeur()
  var haut:Int=getMondeHauteur()
  setIndication(x,y,0)
  while (compteur!=0){
    compteur=0
    for (k <- 0 to larg-1){
      for (l <- 0 to haut-1){
        var numSol:Int=getIndication(k,l)
        if (numSol!=9999){
          if (!aMurNord(k,l) && getIndication(k,l-1)==9999){
            setIndication(k,l-1,numSol+1)
            compteur=1
          }
          if(!aMurOuest(k,l) && getIndication(k-1,l)==9999){
            setIndication(k-1,l,numSol+1)
            compteur=1
          }

        }
        else {
          var sup:Int=getIndication(k,l-1)
          var gauche:Int=getIndication(k-1,l)
          if(sup<gauche && sup !=9999 && !aMurNord()){
            setIndication(k,l,sup+1)
            compteur=1
          }
          else {
            if (gauche<sup && gauche != 9999 && !aMurOuest()) {
              setIndication(k,l,gauche+1)
              compteur=1
            }
          }
        }
      }
    }
  }
}
